# codeinterpreter_api_agent

./: .env.example  .gitmodules  .pre-commit-config.yaml  .pylintrc  404.html  envsetup.sh  healthcheck.sh  index.html  install.sh  install_0.sh  install_10.sh  install_11.sh  install_12.sh  pyproject.toml  requirements.txt  ruff.toml  server.py  sitemap.xml
.github/workflows/: ci.yml  mkdocs.yml
bitcoin_chart/: index.html
code_interpreter_response/: index.html
code_interpreter_session/: index.html
codebox/: index.html
concepts_overview/: index.html
deploy/: index.html
examples/: anthropic_claude.py  chat_cli.py  chat_history_backend.py  plot_sin_wave.py  show_bitcoin_chart.py  use_additional_tools.py
examples/frontend/: app.py  chainlitui.py  code_interpreter.py  db_manager.py  utils.py
file/: index.html
frontend/: app.py
installation/: index.html
iris_dataset/: index.html
settings/: index.html
src/codeinterpreterapi/: __init__.py  _patch_parser.py  config.py  schema.py  session.py
src/codeinterpreterapi/agents/: agents.py
src/codeinterpreterapi/agents/config/: agents_config.yaml
src/codeinterpreterapi/agents/config/code_fix_agent/: config.yaml
src/codeinterpreterapi/agents/config/code_optimizer_agent/: config.yaml
src/codeinterpreterapi/agents/config/code_review_agent/: config.yaml
src/codeinterpreterapi/agents/config/code_review_and_forward_agent/: config.yaml
src/codeinterpreterapi/agents/config/code_split_agent/: config.yaml
src/codeinterpreterapi/agents/config/code_write_agent/: config.yaml
src/codeinterpreterapi/agents/config/coding_agent/: config.yaml
src/codeinterpreterapi/agents/config/design_fix_agent/: config.yaml
src/codeinterpreterapi/agents/config/design_refactoring_agent/: config.yaml
src/codeinterpreterapi/agents/config/design_update_agent/: config.yaml
src/codeinterpreterapi/agents/config/design_write_agent/: config.yaml
src/codeinterpreterapi/agents/config/design_writer_agent/: config.yaml
src/codeinterpreterapi/agents/config/fix_agent/: config.yaml
src/codeinterpreterapi/agents/config/split_agent/: config.yaml
src/codeinterpreterapi/agents/config/test_case_generator_agent/: config.yaml
src/codeinterpreterapi/agents/config/zoltraak_agent/: config.yaml
src/codeinterpreterapi/agents/plan_and_execute/: __init__.py  agent_executor.py  prompts.py
src/codeinterpreterapi/agents/structured_chat/: __init__.py  agent.py  agent_executor.py  prompts.py
src/codeinterpreterapi/agents/tool_calling/: __init__.py  agent.py  agent_executor.py  create_tool_calling_agent.py  prompts.py
src/codeinterpreterapi/brain/: __init__.py  brain.py  params.py
src/codeinterpreterapi/callbacks/: callbacks.py  util.py
src/codeinterpreterapi/callbacks/markdown/: callbacks.py
src/codeinterpreterapi/callbacks/stdout/: callbacks.py
src/codeinterpreterapi/chains/: modifications_check.py  rm_dl_link.py
src/codeinterpreterapi/crew/: crew_agent.py  custom_agent.py
src/codeinterpreterapi/crewai/: crew_agent.py  custom_agent.py
src/codeinterpreterapi/graphs/: __init__.py  agent_wrapper_tool.py  graphs.py
src/codeinterpreterapi/graphs/tool_node/: tool_node.py
src/codeinterpreterapi/invoke_tasks/: python.py
src/codeinterpreterapi/llm/: llm.py
src/codeinterpreterapi/planners/: planners.py  prompts.py
src/codeinterpreterapi/prompts/: __init__.py  system_message.py
src/codeinterpreterapi/supervisors/: prompts.py  supervisors.py
src/codeinterpreterapi/test_prompts/: test_prompt.py
src/codeinterpreterapi/thoughts/: base.py  checker.py  controller.py  prompts.py  thought_generation.py  thoughts.py  tot.py
src/codeinterpreterapi/tools/: bash.py  code_checker.py  python.py  tools.py  zoltraak.py
src/codeinterpreterapi/utils/: __init__.py  file_util.py  multi_converter.py  output_parser.py  prompt.py  runnable.py  runnable_history.py
streamlit_webapp/: index.html
tests/: chain_test.py  general_test.py  one_test.py  tool_test.py
usage/: index.html
user_request/: index.html
