[project]
authors = [{name = "Shroominic", email = "contact@shroominic.com"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "langchain-core~=0.3.5",
  "langchain-community~=0.3.0",
  "langchain~=0.3.0",
  "langchain-anthropic~=0.2.1",
  "langchain-cli~=0.0.31",
  "langchain-experimental~=0.3.0",
  "langchain-google-genai~=2.0.0",
  "langchain-openai~=0.2.0",
  "langchain-cohere~=0.3.0",
  "codeboxapi~=0.1.19",
  "pyzmq~=25.1.2",
  "invoke~=2.2.0",
]
description = "CodeInterpreterAPI is an (unofficial) open source python interface for the ChatGPT CodeInterpreter."
keywords = [
  "codeinterpreter",
  "chatgpt",
  "codeinterpreterapi",
  "api",
  "langchain",
  "codeboxapi",
]
license = {file = "LICENSE"}
name = "codeinterpreterapi"
readme = "README.md"
requires-python = ">= 3.10, <3.13"
version = "0.1.17"

[tool.hatch.build.targets.wheel]
name = "GuiAgentLoopCore"
packages = ["GuiAgentLoopCore"]

[project.urls]
Code = "https://github.com/shroominic/codeinterpreter-api"
Docs = "https://shroominic.github.io/codeinterpreter-api"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = [
  "ruff",
  "mypy",
  "isort",
  "pytest",
  "ipython",
  "pre-commit",
  "codeinterpreterapi[all]",
  "mkdocs-material>=9.4",
]
managed = true

[project.optional-dependencies]
all = ["codeboxapi[all]", "codeinterpreterapi[frontend]"]
frontend = ["streamlit"]
image_support = ["codeboxapi[image_support]"]
localbox = ["codeboxapi[local_support]"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
addopts = "-p no:warnings"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
skip_gitignore = true
use_parentheses = true
# you can skip files as below
#skip_glob = docs/conf.py

[tool.flake8]
max-line-length = 120

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pylint.messages_control]
disable = ["global-statement", "missing-docstring", "broad-exception-caught"]

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '\.pyi?$'
line-length = 120
skip-string-normalization = true
target-version = ['py36', 'py37', 'py38', 'py39']
